Perkin-UAT/force-app/main/default/objects/FCO_Lines__c/FCO_Lines__c.object-meta.xml
<CustomObject>
    <label>FCO Line</label>
    <nameField>
        <displayFormat>FCOLine-{0000}</displayFormat>
        <label>FCO Lines Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FCO Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>