Perkin-UAT/force-app/main/default/objects/FCO_Lines__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>FCO Lines</relationshipLabel>
    <relationshipName>FCO_Line1</relationshipName>
    <type>Lookup</type>
</CustomField>