Perkin-UAT/force-app/main/default/objects/FCO_Lines__c/fields/Contact_Role_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Role_Email__c</fullName>
    <label>Contact Role Email</label>
    <type>Email</type>
</CustomField>