Perkin-UAT/force-app/main/default/objects/FCO_Lines__c/fields/Customer_Date_Notified__c.field-meta.xml
<CustomField>
    <fullName>Customer_Date_Notified__c</fullName>
    <label>Customer Date Notified</label>
    <type>Date</type>
</CustomField>