Perkin-UAT/force-app/main/default/objects/FCO_Lines__c/fields/Customer_Notification_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Notification_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Notification Date</label>
    <type>Checkbox</type>
</CustomField>