Perkin-UAT/force-app/main/default/objects/FCO_Lines__c/fields/Customer_Notified__c.field-meta.xml
<CustomField>
    <fullName>Customer_Notified__c</fullName>
    <label>Customer Notified</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>