Perkin-UAT/force-app/main/default/objects/FCO_Lines__c/fields/Description_of_Manual_Closure__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Manual_Closure__c</fullName>
    <label>Description of Manual Closure</label>
    <type>TextArea</type>
</CustomField>