Perkin-UAT/force-app/main/default/objects/FCO_Lines__c/fields/FCO__c.field-meta.xml
<CustomField>
    <fullName>FCO__c</fullName>
    <label>FCO</label>
    <referenceTo>FCO__c</referenceTo>
    <relationshipLabel>FCO Lines</relationshipLabel>
    <relationshipName>FCO_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>