Perkin-UAT/force-app/main/default/objects/FCO_Lines__c/fields/FCO_English_URL__c.field-meta.xml
<CustomField>
    <fullName>FCO_English_URL__c</fullName>
    <formula>FCO__r.English_FCO_URL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FCO English URL</label>
    <type>Text</type>
</CustomField>