Perkin-UAT/force-app/main/default/objects/FCO_Lines__c/fields/FCO_Type__c.field-meta.xml
<CustomField>
    <fullName>FCO_Type__c</fullName>
    <formula>CASE( FCO__r.FCO_Type__c,
&quot;Important Field Safety Notice&quot;,&quot;Important Field Safety Notice&quot;,
&quot;Important Field Safety Modification&quot;,&quot;Important Field Safety Modification&quot;,
&quot;Important User Notice&quot;,&quot;Important User Notice&quot;,
&quot;Important Product Modification&quot;,&quot;Important Product Modification&quot;,
&quot;Product Bulletin&quot;,&quot;Product Bulletin&quot;,
&quot;Product Modification&quot;,&quot;Product Modification&quot;,
&quot;Product Recommendation&quot;,&quot;Product Recommendation&quot;,
&quot;Internal Information Exchange&quot;,&quot;Internal Information Exchange&quot;,
null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FCO Type</label>
    <type>Text</type>
</CustomField>