Perkin-UAT/force-app/main/default/objects/FCO_Lines__c/fields/Installed_Product_1__c.field-meta.xml
<CustomField>
    <fullName>Installed_Product_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Installed Product 1</label>
    <referenceTo>SVMXC__Installed_Product__c</referenceTo>
    <relationshipLabel>FCO Lines</relationshipLabel>
    <relationshipName>FCO_Line3</relationshipName>
    <type>Lookup</type>
</CustomField>