Perkin-UAT/force-app/main/default/objects/FCO_Lines__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>SVMXC__Site__c</referenceTo>
    <relationshipLabel>FCO Lines</relationshipLabel>
    <relationshipName>FCO_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>