Perkin-UAT/force-app/main/default/objects/FCO_Lines__c/fields/Manual_Closure_User__c.field-meta.xml
<CustomField>
    <fullName>Manual_Closure_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manual Closure User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>FCO_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>