Perkin-UAT/force-app/main/default/objects/FCO_Lines__c/fields/Parts_MovexOrderNo__c.field-meta.xml
<CustomField>
    <fullName>Parts_MovexOrderNo__c</fullName>
    <label>Parts MovexOrderNo</label>
    <length>64</length>
    <type>Text</type>
</CustomField>