Perkin-UAT/force-app/main/default/objects/FCO_Lines__c/fields/RMA__c.field-meta.xml
<CustomField>
    <fullName>RMA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RMA</label>
    <referenceTo>SVMXC__RMA_Shipment_Order__c</referenceTo>
    <relationshipLabel>FCO Lines</relationshipLabel>
    <relationshipName>FCO_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>