Perkin-UAT/force-app/main/default/objects/FCO_Lines__c/fields/RMA_Created__c.field-meta.xml
<CustomField>
    <fullName>RMA_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RMA Created</label>
    <type>Checkbox</type>
</CustomField>