Perkin-UAT/force-app/main/default/objects/FCO_Lines__c/fields/SibexEmployerProduct_Id__c.field-meta.xml
<CustomField>
    <fullName>SibexEmployerProduct_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SibexEmployerProduct Id</label>
    <referenceTo>SVMXC__Installed_Product__c</referenceTo>
    <relationshipLabel>FCOLines</relationshipLabel>
    <relationshipName>FCOLines2</relationshipName>
    <type>Lookup</type>
</CustomField>